add some  changes

--- a/Home.html
+++ b/Home.html
@@ -23,5 +23,13 @@
                 </nav>
             </div>
         </header>
+
+
+        <dev class="main">
+            <h1>Welcome to Quick Read Prescription Scanning System</h1>
+            <p>Your trusted solution for efficient prescription management.</p>
+            <img src="/images/homepage_image.png" alt="Prescription Scanning" class="home-image">
+
+        </dev>
 </body>
 </html>
