--- a/Home.html
+++ b/Home.html
@@ -29,6 +29,11 @@
             <h1>Welcome to Quick Read Prescription Scanning System</h1>
             <p>Your trusted solution for efficient prescription management.</p>
             <img src="/images/homepage_image.png" alt="Prescription Scanning" class="home-image">
+            <h2>get the elements
+                <br>
+                <br>
+                <a href="table.html" class="cta-button">Explore Features</a>
+            </h2>
 
         </dev>
 </body>
